# oci_agent_adk

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
config/: .env  sample_.env
outbox/: dummy-0c091af157ff42e385bdcb83c186ff4c.json  dummy-14de57e1a6994432a3858613af20ce51.json  dummy-3f74a8c358be452a9cbf59d2ff25cda7.json  dummy-845b427888ac42ce8b016b2a10c88d96.json  dummy-e4387f48fa3c41bfa45b120f6bbc3fa2.json
src/agent_teams/: orderx_hub.py
src/agents/: agent_image2text.py  calculator_multi_turns.py  create_sales_order.py  getinsights.py  oracle-db-operator.py  oracledb_operator.py  orderx.py  receive_sales_order.py  taxagent.py
src/common/: config.py  fency_title.py
src/config/: .env
src/custom_rag/: README.md
src/data/: input_M&E_txt_RAG_1.txt  sales_order.py
src/examples/: calculator_multi_turns.py  delete_tools.py  multi_agent_collab.py  multi_tools.py  test_setup.py
src/jiayuan_customer_support_agent/: customer_support_agent.py
src/llm/: api_genai_agent.py  oci_ds_md.py  oci_embedding_model.py  oci_genai.py  oci_genai_agent.py  oci_genai_vision.py
src/prompt_engineering/: system_prompt.py  topics.py
src/toolkit/: fusion_scm_order_toolkit.py  multimodal2text_toolkit.py  user_info.py
src/tools/: business_objects_tools.py  custom_function_tools.py  customer_support_rag_tool.py  deeplink_tools.py  document_tool.py  dummy_email_tool.py  email_tools.py  external_REST_tools.py  rag_tools.py  slack_tools.py  speech_instruct_tools.py  sql_tool.py  vision_instruct.py  vision_instruct_tools.py
src/utils/: extract_llm_response.py  oci_rag_metadata.py  (+2 more)
(+23 files in other folders)
